# irods_api_plugin_replica_truncate

./: CMakeLists.txt  README.md  build.ubuntu22.Dockerfile  build_packages.sh
client/: CMakeLists.txt
client/src/: main.cpp
include/irods/plugins/api/: rc_replica_truncate.h  replica_truncate_common.h  rs_replica_truncate.h
include/irods/plugins/api/private/: replica_truncate_common.hpp
src/: client.cpp  plugin_factory.cpp  rc_replica_truncate.cpp  rs_replica_truncate.cpp  server.cpp
unit_tests/: CMakeLists.txt
unit_tests/src/: irods_error_enum_matcher.hpp  test_rc_data_obj_truncate.cpp  unit_test_utils.hpp
